# BlenderBfresImporter

./: .editorconfig  .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml
io_scene_bfres/: __init__.py  attribute.py  bfrespy  blender_manifest.toml  bone_anim_importer.py  exceptions.py  importing.py  material_importer.py  mesh_importer.py  model_importer.py  skeleton_importer.py  texture_importer.py  yaz0.py
io_scene_bfres/bfrespy/: animhelper.py  binary_io.py  common.py  core.py  external_file.py  gx2.py  res_file.py  rlt.py  skeletal_anim.py  texture.py
io_scene_bfres/bfrespy/models/: material.py  model.py  shape.py  skeleton.py  vertex_buffer_attrib.py
io_scene_bfres/bfrespy/switch/: memory_pool.py  res_file_parser.py  switchcore.py
io_scene_bfres/bfrespy/switch/model/: material_parser.py  model_parser.py  sampler_switch.py  shape_parser.py  vertex_buffer.py
io_scene_bfres/bntx/: __init__.py  bntx.py  brti.py  nx.py
io_scene_bfres/bntx/pixelfmt/: __init__.py  base.py  formatinfo.py  rgb.py  swizzle.py
io_scene_bfres/bntx/pixelfmt/astc/: __init__.py  decompress_.py  formats.py
io_scene_bfres/bntx/pixelfmt/bcn/: __init__.py  decompress_.py  dx10.py  formats.py
io_scene_bfres/wheels/: texture2ddecoder-1.0.6-cp311-abi3-macosx_11_0_arm64.whl  texture2ddecoder-1.0.6-cp311-abi3-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  texture2ddecoder-1.0.6-cp311-abi3-win_amd64.whl
